main/default/objects/Logger_Settings__c/Logger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Logger Settings</label>
</CustomObject>