main/default/objects/Logger_Settings__c/fields/Archival_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Archival_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archival Enabled</label>
    <type>Checkbox</type>
</CustomField>