main/default/objects/Logger_Settings__c/fields/Audit_Trail_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Audit_Trail_Time_Window__c</fullName>
    <description>In hours</description>
    <inlineHelpText>In hours</inlineHelpText>
    <label>Audit Trail Time Window (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>