main/default/objects/Logger_Settings__c/fields/Batch_Error_Tracking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Batch_Error_Tracking_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Error Tracking Enabled</label>
    <type>Checkbox</type>
</CustomField>