main/default/objects/Logger_Settings__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>