main/default/objects/Logger_Settings__c/fields/Email_Service_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Email_Service_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Service Confirmed</label>
    <type>Checkbox</type>
</CustomField>