main/default/objects/Logger_Settings__c/fields/Enable_Automated_Flow_Error_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Automated_Flow_Error_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Automated Flow Error Tracking</label>
    <type>Checkbox</type>
</CustomField>