main/default/objects/Logger_Settings__c/fields/Enable_Email_To_Case_Error_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_To_Case_Error_Tracking__c</fullName>
    <label>Enable Email-To-Case Error Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>