main/default/objects/Logger_Settings__c/fields/Error_Report_CC_emails__c.field-meta.xml
<CustomField>
    <fullName>Error_Report_CC_emails__c</fullName>
    <label>Error Report CC emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>