main/default/objects/Logger_Settings__c/fields/Error_Reporting_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Error_Reporting_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Reporting Opt-out</label>
    <type>Checkbox</type>
</CustomField>