main/default/objects/Logger_Settings__c/fields/Last_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Issue_Number__c</fullName>
    <label>Last Issue Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>