main/default/objects/Logger_Settings__c/fields/Limits_Monitoring_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Limits_Monitoring_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limits Monitoring Enabled</label>
    <type>Checkbox</type>
</CustomField>