main/default/objects/Logger_Settings__c/fields/Limits_Monitoring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Limits_Monitoring_Frequency__c</fullName>
    <label>Limits Monitoring Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>