main/default/objects/Logger_Settings__c/fields/Monitoring_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoring Enabled</label>
    <type>Checkbox</type>
</CustomField>