main/default/objects/Logger_Settings__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <defaultValue>&quot;pharos__&quot;</defaultValue>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>