main/default/objects/Logger_Settings__c/fields/Notifications_24hr_Counter__c.field-meta.xml
<CustomField>
    <fullName>Notifications_24hr_Counter__c</fullName>
    <label>Notifications 24hr Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>