main/default/objects/Logger_Settings__c/fields/Quick_Start_State__c.field-meta.xml
<CustomField>
    <fullName>Quick_Start_State__c</fullName>
    <label>Quick Start State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>