main/default/objects/Logger_Settings__c/fields/Report_by_Hash_1__c.field-meta.xml
<CustomField>
    <fullName>Report_by_Hash_1__c</fullName>
    <defaultValue>&quot;Summary by Date Filtered 1&quot;</defaultValue>
    <description>Name of the report by Hash 1 (Ex: Summary by Date Filtered 1)</description>
    <inlineHelpText>Name of the report by Hash 1 (Ex: Summary by Date Filtered 1)</inlineHelpText>
    <label>Report by Hash 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>