main/default/objects/Logger_Settings__c/fields/Report_by_Hash_2__c.field-meta.xml
<CustomField>
    <fullName>Report_by_Hash_2__c</fullName>
    <defaultValue>&apos;Summary by Date Filtered 2&apos;</defaultValue>
    <label>Report by Hash 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>