main/default/objects/Logger_Settings__c/fields/Report_by_Hash_3__c.field-meta.xml
<CustomField>
    <fullName>Report_by_Hash_3__c</fullName>
    <defaultValue>&apos;Summary by Date Filtered 3&apos;</defaultValue>
    <label>Report by Hash 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>