main/default/objects/Logger_Settings__c/fields/Service_Scheduler_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Service_Scheduler_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Service Scheduler Enabled</label>
    <type>Checkbox</type>
</CustomField>