main/default/objects/Logger_Settings__c/fields/Web_2_Lead_Parser_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Web_2_Lead_Parser_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web 2 Lead Parser Enabled</label>
    <type>Checkbox</type>
</CustomField>