main/default/objects/Logger_Settings__c/fields/X24_Hour_Counter__c.field-meta.xml
<CustomField>
    <fullName>X24_Hour_Counter__c</fullName>
    <label>24 Hour Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>